syntax = "proto3";
package junction.trackgate;

option go_package = "github.com/airchains-network/junction/x/trackgate/types";

message TrackgatePaginationResponse {
  
  uint64 offset = 1; 
  uint64 limit = 2; 
  string order = 3; 
  uint64 total = 4; 
}
